--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,12 @@
   text-align: left;
   display: grid;
   grid-template-columns: repeat(3 , 1fr);
-  margin-left: 100px;
+  margin-left: 120px;
+  margin-right: 20px;
   padding: 20px;
   grid-column-gap: 15px;
   box-shadow: 2px 2px 2px 3px silver;
+
 }
 
 .featured-border{
@@ -737,7 +739,7 @@ a{
 
 
 .footer-link{
-  color: white
+color: #000;
 }
 
 
@@ -837,8 +839,8 @@ ul{
 
 
 footer{
-  border: black solid 1px;
-  background-color: black;
+  border-top: black solid 1px;
+  background-color: white;
   height: 100%
 }
 
@@ -1023,6 +1025,8 @@ nav{
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 
+ 
+  
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
