--- a/src/App.css
+++ b/src/App.css
@@ -1017,6 +1017,7 @@ select {
   border: 1px solid #ccc;
   border-radius: 5px;
   
+  
 }
 
 
@@ -1122,6 +1123,94 @@ select {
   border: none;
   cursor: pointer;
 }
+
+
+.login-form{
+  border: 1px solid white;
+  background-color: white;
+  border-radius: 8px;
+  height: 460px;
+  width: 70%;
+  box-shadow: 1px 2px 2px 2px #000;
+  text-align: center;
+  margin-left: 16%;
+}
+
+.label-signup{
+  display: inline-block;
+    width: 50%;
+    text-align: left;
+    font-weight: bold;
+}
+
+input[type=text] , input[type=password], input[type=email], textarea{
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+input[type=submit] {
+  width: 30%;
+  background-color: black;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.signup-form{
+  border: 1px solid white;
+  background-color: white;
+  border-radius: 1%;
+  box-shadow: 1px 2px 2px 2px black;
+  width: 70%;
+  margin-left: 80px;
+  text-align: center;
+}
+
+.modal-btn{
+  margin-left: 90%;
+  border: none;
+  background-color: white;
+}
+
+
+.modal-container{
+  border: black 1px solid;
+  max-width: 600px;
+  width: 90%;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  background-color: #ffffff;
+  box-shadow: 1px 2px 1px black;
+  overflow: hidden;
+  position: absolute;
+}
+
+  
+.content{
+  margin-left: 30%;
+}
+
+ .closeBtn{
+    position: fixed;
+    top: 1px;
+    right: 8px;
+    cursor: pointer;
+  }
+
+
+  
 
  }
 
