--- a/src/App.css
+++ b/src/App.css
@@ -1375,6 +1375,7 @@ a{
   overflow: hidden;
   overflow-y: auto;
   position: absolute;
+  right: 100px;
 }
 
 .searchInputs{
@@ -1423,6 +1424,14 @@ a{
   grid-template-columns: 50px 50px;
 }
 
+
+.landing-header, .featured-header{
+  text-align: justify;
+  margin-left: 100px;
+  padding: 20px;
+
+}
+
  }
 
 @media (min-width: 577px) and (max-width: 768px) {
@@ -1430,7 +1439,7 @@ a{
 
   nav{
     border-bottom: black solid 2px;
-    height: 100px;
+    height: 130px;
   }
   
   a{
@@ -1441,7 +1450,7 @@ a{
 
     display: grid;
 
-    grid-template-columns: 30% 20% 30%;
+    grid-template-columns: 40% 40% 50%;
 
   }
 
@@ -1450,4 +1459,120 @@ a{
     grid-template-columns: 100% 30%;
   }
 
+  .info-section{
+    margin-left: 20px;
+  }
+  
+  
+  .dataResult{
+    margin-top: 5px;
+    width: 300px;
+    height: 200px;
+    border: #000 1px solid;
+    background-color: white;
+    overflow: hidden;
+    overflow-y: auto;
+    position: absolute;
+    right: 175px;
+  }
+  
+  .searchInputs{
+      text-align:  center;
+      display: flex;
+    }
+    
+    
+    
+    
+    .search .searchbar{
+      border: 0px;
+      border-radius: 2px;
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+      font-size: 18px;
+      padding: 15px;
+      height: 1px;
+      width: 180px;
+      border: #000 1px solid;
+      margin-top: 78px;
+    position: relative;
+    right: 80px;
+    }
+    
+   
+  
+    .searchIcon{
+      background-color: white;
+      height: 30px;
+      margin-top: 78px;
+      display: grid;
+      place-items: center;
+      border-left: #000 1px solid;
+      border: #000 solid 1px;
+      position: relative;
+    right: 80px;
+    }
+
+    .nav-category{
+      margin-top: 22px;
+      display: grid;
+      grid-template-columns: repeat(3, 100%);
+    }
+
+    .landing-page{
+      background-color: #F5F5F5;
+      
+    }
+  
+    .landing-header, .featured-header{
+      text-align: justify;
+      margin-left: 100px;
+      padding: 20px;
+  }
+
+
+  .category-description {
+    line-height: 1.5;
+    padding: 20px;
+    text-align: justify;
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 100px;
+  }
+
+  .selected-image{
+    height: 150px;
+    width: 120px;
+  }
+
+  .featured-items{
+    text-align: left;
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    padding: 20px;
+    grid-column-gap: 15px;
+    box-shadow: 2px 2px 2px 3px silver;
+  
+  }
+  
+  .featured-image{
+    height: 180px;
+    width: 130px;
+  }
+
+  .border-products{
+    display: grid;
+    grid-template-columns: repeat(3 , 150px);
+    grid-column-gap: 20px;
+    position: relative;
+    left: 20px;
+  }
+
+
+ .featured-header{
+    text-align: justify;
+    position: relative;
+    right: 110px;
+  
+  }
 }
