--- a/src/App.css
+++ b/src/App.css
@@ -1569,10 +1569,114 @@ a{
   }
 
 
- .featured-header{
-    text-align: justify;
+ .featured-header{  text-align: justify;
     position: relative;
     right: 110px;
-  
   }
+
+  .category-heading{
+    text-align: center;
+  }
+
+  .filter-products{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 20px;
+  }
+
+
+  select {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    
+    
+  }
+
+
+  .product-card{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 20px;
+    
+    text-align: center;
+    
+  }
+
+  .product-card-section{
+    box-sizing: border-box;
+    border: 1px solid black;
+    width: 80%;
+    height: 110%;
+    box-shadow: 2px 2px 4px #000000;
+    border-radius: 5px;
+  }
+
+  .product{
+    height: 100%;
+    width: 70%;
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 2%;
+    margin-left: 50px;
+    box-shadow: 1px 2px 2px 2px #000000;
+  }
+
+
+  .product-image{
+    margin-top: 10px;
+    height: 170px;
+    width: 115px;
+  }
+
+
+  .cart-btns-category{
+    background-color: black;
+    color: white;
+    border: none;
+    height: 45px;
+    width: 90px;
+  }
+
+
+  .login-form{
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 8px;
+    height: 400px;
+    box-shadow: 1px 2px 2px 2px #000;
+    text-align: center;
+    width: 78%;
+    position: relative;
+    left: 70px;
+
+  }
+
+
+  input[type=text] , input[type=password], input[type=email], textarea{
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  
+  input[type=submit] {
+    width: 30%;
+    background-color: black;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+
 }
