Finished the main view for small and table view for the app, I will do further improvements later down the line

--- a/src/App.css
+++ b/src/App.css
@@ -1878,4 +1878,48 @@ a{
     width: 120px;
   }
 
+  .search-cart{
+    display: grid;
+    grid-template-columns: repeat(1);
+    grid-row-gap: 40px;
+    margin-left: 140px;
+    
+  }
+
+
+  .search-section{
+    box-sizing: border-box;
+    border: 1px solid black;
+    width: 70%;
+    height: 110%;
+    box-shadow: 2px 2px 4px #000000;
+    border-radius: 5px;
+  }
+
+
+  .search-images{
+    height:110px;
+    width: 90px;
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+
+
+  .pagination{
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 15px);
+    color:  #002D62;
+    cursor: pointer;
+    list-style: none;
+    margin-left: 15%;
+  }
+
+
+  .delete-trash{
+    margin-left: 90%;
+    border: none;
+    background-color: white;
+  }
+  
 }
