Landing page, product section, portion of the details page, login, signup, and cart media query for small screens finished

--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -61,3 +61,64 @@
 
 
 }
+
+@media (min-width: 320px) and (max-width: 576px){
+
+  select {
+    width: 90%;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    height: 30px;
+  }
+  
+  .filter-products{
+    display: grid;
+    grid-row-gap: 15px;
+    text-align: center;
+  }
+
+
+  .category-heading{
+    text-align: center;
+  }
+
+  .product-card{
+    text-align: center;
+    display: grid;
+    grid-row-gap: 70px;
+  }
+
+  .product{
+    height: 110%;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 2%;
+    box-shadow: 1px 2px 2px 2px #000000;
+
+  }
+
+  .product-image{
+    height: 170px;
+    width: 115px;
+  }
+
+
+  .cart-btns-category{
+    background-color: black;
+    color: white;
+    border: none;
+    height: 45px;
+    width: 100px
+  }
+  
+  .cart-btns-category:hover{
+    cursor: pointer;
+  }
+  
+  .cart-btns-category:active{
+    background-color: blue;
+  }
+
+}
