--- a/src/Components/UserInfo/UsersDetails.css
+++ b/src/Components/UserInfo/UsersDetails.css
@@ -19,4 +19,37 @@
         height: 180%;
       }
 
+
+    
+        /* .user-details {
+          text-align: center;
+          max-width: 600px;
+          margin: 0 auto;
+          padding: 20px;
+          
+          border-radius: 5px;
+     
+        } */
+      
+        .bold-label {
+          font-weight: bold;
+        }
+      
+        .edit {
+         text-align: left;
+        }
+
+        .info-label{
+          text-align: left;
+        }
+
+        .user-details{
+          text-align: center;
+        }
+      
+        .usersname{
+          text-align: left;
+        }
+  
+
 }
