--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -108,22 +108,44 @@
 
   a{
     text-decoration: none;
-
+    color: black;
   }
 
-  nav{
+nav{
     border-bottom: black solid 2px;
   }
 
-  .nav-1{
+  .nav-category{
 
     display: grid;
-    grid-template-columns: 50% 70%;
-    
+    grid-template-columns: repeat(3 , 1fr);
+
+  }
+
+ 
+
+  .dataResult{
+    margin-top: 5px;
+    width: 100%;
+    height: 200px;
+    border: #000 1px solid;
+    background-color: white;
+    overflow: hidden;
+    overflow-y: auto;
+    position: absolute;
+
+  }
+
+  .searchIcon{
+    display: none;
+  }
+
+  .nav-3{
+    display: grid;
+    grid-template-columns: 80px 80px;
 
   }
 
 
-  
 }
 
