--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -149,3 +149,60 @@ nav{
 
 }
 
+
+
+
+@media (min-width: 577px) and (max-width: 768px){
+
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+
+nav{
+    border-bottom: black solid 2px;
+  }
+
+  .nav-category{
+
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+
+  }
+
+ 
+
+  .dataResult{
+    margin-top: 5px;
+    width: 100%;
+    height: 200px;
+    border: #000 1px solid;
+    background-color: white;
+    overflow: hidden;
+    overflow-y: auto;
+    position: absolute;
+
+  }
+
+  .searchIcon{
+    display: none;
+  }
+
+  .nav-3{
+    display: grid;
+    grid-template-columns: 80px 80px;
+
+  }
+
+
+
+}
+
+
+
+
+@media (min-width: 769px) and (max-width: 992px){
+
+
+}
