--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -204,5 +204,26 @@ nav{
 
 @media (min-width: 769px) and (max-width: 992px){
 
+  a{
+    text-decoration: none;
+    color: black;
+  }
+
+nav{
+    border-bottom: black solid 2px;
+  }
+
+.nav-1{
+  display: grid;
+  grid-template-columns: 30% 50%;
+
+}
+
+.nav-category{
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+}
+
 
 }
