--- a/src/App.css
+++ b/src/App.css
@@ -611,3 +611,85 @@
   }
 
 }
+
+
+@media (min-width: 769px) and (max-width: 992px){
+
+  input[type=text],
+  input[type=password],
+  input[type=email],
+  textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  .login-form {
+    border: 1px solid #ccc;
+    background-color: white;
+    border-radius: 8px;
+    height: 460px;
+    box-shadow: 1px 2px 2px 2px #000;
+    text-align: center;
+    margin: 0 20px;
+    padding: 20px;
+  }
+
+  .label-signup {
+    display: inline-block;
+    width: 100%;
+    text-align: left;
+    font-weight: bold;
+  }
+
+  input[type=submit] {
+    width: 28%;
+    background-color: black;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .signup-form {
+    border: 1px solid #ccc;
+    background-color: white;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 1px 2px 2px 2px #000;
+    margin: 0 20px;
+    padding: 20px;
+  }
+
+  .modal-btn {
+    margin-left: auto;
+    border: none;
+    background-color: white;
+  }
+
+  .modal-container {
+    border: 1px solid #ccc;
+    width: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    background-color: #ffffff;
+    box-shadow: 1px 2px 2px 2px #000;
+    overflow: hidden;
+    z-index: 9999;
+  }
+
+  .content {
+    margin: auto;
+    padding: 20px;
+  }
+
+}
