--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -45,21 +45,22 @@ font-size: 15px;
 color: white;
 border: none;
 border-radius: 5px;
-background-color: black;
+background-color: rgb(11, 11, 191)
 
 }
 
 
 .fav-btns{
 border: none;
-background-color: white;
+background-color: black;
 text-align: left;
 }
 
 
 .des-btns{
 border: none;
-background-color: white;
+background-color: black;
+color: white;
 font-size: 20px;
 cursor: pointer;
 }
@@ -72,7 +73,9 @@ font-weight: bold;
 
 }
 
-
+p{
+  color: white;
+}
 
 }
 
