--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -1,19 +1,47 @@
 @media (min-width: 993px){
 
-    .filter-products{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-      }
+    .product-page-container{
+
+      display: grid;
+      grid-template-columns: 20% 70%;
+
+    }
 
       
   select {
-    width: 20%;
+    width: 80%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 5px;
     
+  }
+
+  .select-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .select-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
+  
+  .select-container label {
+    font-weight: bold;
+  }
+
+ 
+  .filter-toggle{
+    text-align: left;
+    margin-left: 100px;
+    display: grid;
+    grid-row-gap: 10px;
   }
 
   .product-card{
@@ -70,16 +98,44 @@
     color: white;
   }
 
+  .brand-name{
+    color: white;
+  }
+
+  
+
 }
 
 @media (min-width: 320px) and (max-width: 576px){
 
   select {
-    width: 90%;
-    box-sizing: border-box;
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
     border: 1px solid #ccc;
-    height: 30px;
+    border-radius: 5px;
+    
   }
+
+  .select-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .select-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
+  
+  .select-container label {
+    font-weight: bold;
+  }
+
   
   .filter-products{
     display: grid;
@@ -103,7 +159,7 @@
     margin-left: 10px;
     margin-right: 10px;
     border: 2px solid white;
-    background-color: white;
+    background-color: black;
     border-radius: 2%;
     box-shadow: 1px 2px 2px 2px #000000;
 
@@ -115,12 +171,13 @@
   }
 
 
-  .cart-btns-category{
-    background-color: black;
+ .cart-btns-category{
+    background-color: rgb(11, 11, 191);
     color: white;
     border: none;
     height: 45px;
-    width: 100px
+    border-radius: 5px;
+    width: 120px;
   }
   
   .cart-btns-category:hover{
@@ -131,9 +188,33 @@
     background-color: blue;
   }
 
+  
   h1{
     color: white;
+    text-align: center;
   }
+  label{
+    color: white;
+  }
+
+  .section-name{
+    text-align: center;
+  }
+
+  .price{
+    color: white;
+  }
+
+  .brand-name{
+    color: white;
+  }
+
+  .filter-toggle {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust the minmax value as needed */
+  overflow-x: auto;
+  white-space: nowrap;
+}
 
 }
 
