--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -77,7 +77,8 @@
 @media (min-width: 320px) and (max-width: 576px) {
 
   .landing-page {
-    background-color: #F5F5F5;
+    background-color: black;
+    border: silver 2px solid;
 
   }
 
@@ -105,12 +106,13 @@
     /* word-break: break-word; */
     hyphens: auto;
     padding: 0 20px; /* Add padding for better readability */
+    color: white;
   }
   
 
   .featured-items{
     text-align: center;
-    box-shadow: 2px 2px 2px 3px silver;
+    border: white 1px solid;
   
   }
 
@@ -118,6 +120,10 @@
   .featured-image{
     height: 180px;
     width: 130px;
+  }
+
+  h4{
+    color: white;
   }
   
 }
