--- a/src/Components/Favorite/Favorite.css
+++ b/src/Components/Favorite/Favorite.css
@@ -6,7 +6,7 @@
        left: 200px;
        top: 60px;
         border: none;
-        background-color: white;
+      background-color: black;
       }
 
       .search-cart{
