--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -111,17 +111,18 @@
 
   a{
     text-decoration: none;
-    color: black;
+    color: white
   }
 
 nav{
-    border-bottom: black solid 2px;
+    border-bottom: silver solid 2px;
   }
 
   .nav-category{
 
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
+    text-align: center;
 
   }
 
@@ -160,7 +161,7 @@ nav{
 
   a{
     text-decoration: none;
-    color: black;
+    color: white
   }
 
 nav{
