--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -2,9 +2,35 @@
 
 @media (min-width: 993px){
 
+
+.image{
+
+  width: 400px;
+  height: 480px;
+
+
+}
+
+
 .image-container{
 
 margin-top: 30px;
+
+display: grid;
+grid-row-gap: 20px;
+}
+
+.selected-image{
+width: 90px;
+height: 80px;
+
+}
+
+.image-option{
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 100px);
+ 
 
 }
 
@@ -14,7 +40,6 @@ display: grid;
 
 grid-template-columns: 40% 50%
 
-
 }
 
 .cart-input{
@@ -23,6 +48,8 @@ border-radius: 5px;
 
 
 }
+
+
 
 
 .details-name, .input-container, .description-container{
