--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -38,7 +38,7 @@
         grid-column-gap: 15px;
       }
 
-      .selected-image{
+      .landing-image{
         height: 150px;
         width: 120px;
       }
