--- a/src/App.css
+++ b/src/App.css
@@ -223,8 +223,8 @@
   }
   
   .cart-btns{
-    background-color: white;
-    color: black;
+    background-color: blue;
+    color: white;
     border: none;
     height: 45px;
     width: 200px;
